and this project tries to adhere to https://semver.org/spec/v2.0.0.html[Semantic Versioning].

== Unreleased

=== Added

2021-01-05::
* Add properties for htmlSanityCheck #507

=== Changed

2021-01-25::
* Add support of multiple EA project locations in parallel #514
* updated Gradle to 6.7.1
* added JDK14 for travis-ci testing

=== Fixed

2021-01-25::
* [523] - fix for generateDeck

2021-01-25::
* fixed docs: ConfluenceConfig.groovy missing #492

== 1.3.0 - 2021-01-20

=== Added

2020-09-07::
* Ability to export Jira Sprint(s) data changelog (key, summary) (https://github.com/docToolchain/docToolchain/pull/473[#473])


== 1.2.0 - 2020-02-09

=== Added

2020-08-24::
* Ability to export OpenAPI specification to asciidoc (https://github.com/docToolchain/docToolchain/issues/464[#464])

2020-08-20::
* New attribute 'ancestorName' for easier nesting in Confluence (https://github.com/docToolchain/docToolchain/issues/460[#460])

2020-07-08::
* Jira configuration for multiple request to Jira API
* Saving Jira results to Excel files
* Basic support for custom fields in Jira results

2020-05-08::
* Jira configuration refactoring to Config.groovy

2019-05-21::
* first version of EA-PlantUML Exchange scripts

2019-02-26::
* first version of `exportMetrics` task
https://github.com/docToolchain/docToolchain/commit/c25ac52e43ccb1d45fa538c06d376258b41e8e32[c25ac52e], https://github.com/docToolchain/docToolchain/commit/a752acfb00206b3ac875b9ab585cd54e9d8fde89[a752acfb]

2019-03-08::
* Add TomTom logo as company who uses docToolchain https://github.com/docToolchain/docToolchain/pull/284[PR#284]


== 1.1.0 - 2020-08-31

=== Added

2020-08-06::
* publishToConfluence
** https://github.com/docToolchain/docToolchain/pull/445[#445 Publish to confluence jira macro support]

=== Changed

2019-05-09::
* upgraded to run with JDK11
** upgraded Gradle to 5.3.1
** upgraded Groovy to 2.5.4 (comes with Gradle 5.4.1)
** upgraded Spock to 1.3

2019-03-13::
* prependFilename