@@ -239,7 +239,7 @@ task generateDeck (
             'revealjs_history': 'true',
             'revealjs_slideNumber': 'true'
     )
-    options template_dirs : [new File(new File (projectDir,'/resources/asciidoctor-reveal.js'),'templates/slim').absolutePath ]
+    options template_dirs : [new File(new File (projectDir,'/resources/asciidoctor-reveal.js'),'templates').absolutePath ]
 
     onlyIf {
         !sourceFiles.findAll {
